Tests/test_output/Statistics_Functions/Mask_functions/test_mask_bndry.txt
WARNING: package sun.awt.X11 not in java.desktop
WARNING: package sun.awt.X11 not in java.desktop

ERROR: Undefined function 'findstrings' for input arguments of type 'cell'.

Error in get_mask (line 90)
    [indices, areas] = findstrings(lower(names), lower(region_name));
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error in test_mask_bndry (line 9)
region_mask = get_mask('HOc', 'Middle Frontal Gyrus');
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error in run (line 112)
evalin('caller', strcat(scriptStem, ';'));
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

STATUS: FAIL
